# aqiq_property_reservation

./: README.md  pyproject.toml
.github/workflows/: ci.yml
aqiq_property_reservation/: hooks.py  modules.txt
aqiq_property_reservation/aqiq_property_reservation/: rest.py
aqiq_property_reservation/fixtures/: client_script.json  custom_field.json
